gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

8/5/99  Added some stuff to configure.in for win32 builds

8/3/99	Added net-consolidate keyword to the rc file, controls if the
	net consolidation code is used or not.

	Fixed a very minor bug in x_attrib.c (dealing with order of which
	attribute combined name/value string)

	Upgraded to libtool 1.3.3

	Due to the unfinishedness of net consolidation, it is turned off by
	default

8/1/99  Removed my_strdup() from i_vars.c and o_comples.c. (by Kazu Hirata)

7/31/99 Cleaned up *.c. (by Kazu Hirata)

7/27/99	Added o_net_consolidate_segments to o_net_end (so that when you 
	draw nets, you get the minimum number of net segments (if possible))

7/25/99 Cleaned up r_gc.c and i_callbacks.c. (by Kazu Hirata)

7/21/99 Found an attribute in test_verilog.sch to be attached to two
	objects, fixed.

	Removed all traces of s_passing.h

7/16/99 Cleaned up i_sbox.c and i_vars.c o_ales.c (by Kazu Hirata)

	Increased world coord space to 120x90, don't know if there are any
	side effects of this.

	Increased the max zoom factor to 256

	Changed x_grid to be draw grid the grid at a larger zoom factor

	Reverted back to previous world coord space, adjusting above to
	match.  Not ready for a change yet.

7/15/99 Added support for libgdgeda 1.6 (mainly means searching for libpng)

	Removed all traces of old libgdgeda 1.5 gif support replaced it with
	png support

	Changed menu name from Write Image... to Write PNG...

	Minor bug fix in the x_image dialog box code (o_redraw_all in the
	wrong place)

7/14/99 Wrote functions to handle file name extention in i_callback.c.

	Fixed a memory leak in g_funcs_print(). (by Kazu Hirata)

7/13/99 Cleaned up i_callbacks.c (by Kazu Hirata)
